--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
         </div>
 
         <div class="grid">
-          <a id="proceed" href="main.html" disabled = "true" class="sm:p-4 py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-white/10 text-white hover:bg-white/20 disabled:opacity-50 disabled:pointer-events-none">
+          <button id="proceed" onclick="load_main()" disabled = "true" class="sm:p-4 py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-white/10 text-white hover:bg-white/20 disabled:opacity-50 disabled:pointer-events-none">
             Proceed
             <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
               viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
               stroke-linejoin="round">
               <path d="m9 18 6-6-6-6" />
             </svg>
-          </a>
+          </button>
         </div>
       </div>
 
